Revert "try to fix twitter overflow"
This reverts commit d69f069bcc713b99e9482b242336ea06d612c56c.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -254,7 +254,7 @@ div.hor-el {
 }
 div.hor-overflow {
     max-height: 400px;
-    overflow-y: scroll;
+    overflow: auto;
     margin-bottom: 2ch;
 }
 div.hor-overflow-fallback {
